# crypto-coin-dataset-auto-updater

./: .gitignore  README.md  USDT-M_Perpetual_Futures_updater.py  futures_updater.py  pyproject.toml  setup_proxy.sh  spot_updater.py  symbols.json  updater.py
.github/: README_TEMPLATE_futures.md  README_TEMPLATE_spot.md
.github/actions/hf-repo-setup/: action.yml
.github/workflows/: USDT-M_Perpetual_Futures_update.yaml  futures_update.yaml  migrate_nested.yaml  migrate_nested_spot.yaml  rebuild_index.yaml  recover_hf.yaml  spot_update.yaml  squash_repo.yaml  update.yaml
docs/superpowers/plans/: 2026-07-10-usdt-m-perpetual-futures-updater.md
docs/superpowers/specs/: 2026-07-10-usdt-m-perpetual-futures-updater-design.md
scripts/: batch_symbols.py  check_symbols.py  pull_lfs.sh  rebuild_index.py  run_cryptocoin_update.sh  run_futures_update.sh  update_meta_listing_date.py  update_symbols.py
tests/: conftest.py  test_futures.py  test_integration_cdn.py
